tests/generated/124_removetags.out
Fatal error: Call to undefined method DtlIter::removetags() in /home/rune/workspace/php-misc/php-dtl-iterator/tests/django-generated/124_removetags.php on line 4